--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
   "name": "AlexMasterov/equip-url-shortener-demo",
-  "description": "Demo of Url Shortener Service",
+  "description": "Demo of URL Shortener Service",
   "require": {
     "php": "^5.5.9 || ^7.0",
     "ext-pdo": "*",
     "ext-pdo_sqlite": "*",
     "equip/framework": "dev-master as 2.0",
-    "zendframework/zend-diactoros": "1.3.5",
-    "josegonzalez/dotenv": "2.0",
-    "paragonie/random_compat": "2.0.2"
+    "zendframework/zend-diactoros": "^1.3",
+    "josegonzalez/dotenv": "^2.0",
+    "paragonie/random_compat": "^2.0"
   },
   "autoload": {
     "psr-4": {
