--- a/.travis.yml
+++ b/.travis.yml
@@ -18,15 +18,13 @@ matrix:
   fast_finish: true
   include:
     - php: 5.6
+    - php: 7
       env:
         - COMPOSER_FLAGS="--prefer-stable"
-    - php: 7
-    - php: hhvm
-  allow_failures:
-    - php: hhvm
+    - php: 7.1
 
 before_script:
-  - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-dist
+  - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-dist --ignore-platform-reqs
   - travis_retry composer require phpunit/phpunit:${PHPUNIT_VERSION}
 
 script:
