--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 # Service
-SHORT_URL_LENGTH = 3
+# available: [ random_bytes | openssl_random_bytes ]
+SHORT_URL_GENERATOR = "random_bytes"
+SHORT_URL_GENERATOR_LENGTH = 3
+SHORT_URL_GENERATOR_ENTROPY = 64
 
 # SQLite
 # available: [ memory | file ]
