--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "php": "^5.5.9 || ^7.0",
     "ext-pdo": "*",
     "ext-pdo_sqlite": "*",
-    "equip/framework": "dev-master as 2.0",
+    "equip/framework": "dev-master#93aa4fa as 2.0",
     "zendframework/zend-diactoros": "^1.3",
     "josegonzalez/dotenv": "^2.0",
     "paragonie/random_compat": "^2.0",
