--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ git:
 
 env:
   global:
-    - PHPUNIT_VERSION="^5.4"
+    - PHPUNIT_VERSION="^5.5"
 
 matrix:
   fast_finish: true
@@ -24,11 +24,11 @@ matrix:
     - php: 7.1
 
 before_script:
-  - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-dist --ignore-platform-reqs
+  - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-source --ignore-platform-reqs
   - travis_retry composer require phpunit/phpunit:${PHPUNIT_VERSION}
 
 script:
-  - vendor/bin/phpunit
+  - vendor/bin/phpunit --report-useless-tests
 
 after_script:
   - bash -c '[[ -f "build/logs/clover.xml" ]] && wget https://scrutinizer-ci.com/ocular.phar'
