--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,8 @@
     "assets-webpack-plugin": "3.4.0",
     "babel-core": "6.14.0",
     "babel-loader": "6.2.5",
+    "babel-plugin-transform-class-properties": "6.11.5",
+    "babel-plugin-transform-object-rest-spread": "6.8.0",
     "babel-preset-latest": "6.14.0",
     "babel-preset-react": "6.11.1",
     "better-npm-run": "0.0.11",
