Improve Blacklist configuration

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Service
-# available: [ self | any ]
-SHORT_URL_BLACKLIST = "self,goo.gl"
+# available: [ self,any ]
+SHORT_URL_BLACKLIST_HOSTS = "self,goo.gl"
 # available: [ random_bytes | openssl_random_bytes ]
 SHORT_URL_GENERATOR = "random_bytes"
 SHORT_URL_GENERATOR_LENGTH = 3
