--- a/ui/package.json
+++ b/ui/package.json
@@ -3,30 +3,30 @@
   "version": "1.0.0",
   "description": "Demo of URL Shortener Service",
   "dependencies": {
-    "axios": "0.14.0",
-    "material-ui": "0.15.4",
-    "react": "15.3.2",
-    "react-dom": "15.3.2",
-    "react-tap-event-plugin": "1.0.0"
+    "axios": "0.15.3",
+    "material-ui": "0.16.5",
+    "react": "15.4.1",
+    "react-dom": "15.4.1",
+    "react-tap-event-plugin": "2.0.1"
   },
   "devDependencies": {
-    "assets-webpack-plugin": "3.4.0",
-    "babel-core": "6.17.0",
-    "babel-loader": "6.2.5",
-    "babel-plugin-transform-class-properties": "6.16.0",
-    "babel-plugin-transform-object-rest-spread": "6.16.0",
+    "assets-webpack-plugin": "3.5.0",
+    "babel-core": "6.20.0",
+    "babel-loader": "6.2.9",
+    "babel-plugin-transform-class-properties": "6.19.0",
+    "babel-plugin-transform-object-rest-spread": "6.20.2",
     "babel-preset-latest": "6.16.0",
     "babel-preset-react": "6.16.0",
-    "better-npm-run": "0.0.11",
-    "clean-webpack-plugin": "0.1.11",
-    "css-loader": "0.25.0",
-    "cssnano": "3.7.6",
+    "better-npm-run": "0.0.13",
+    "clean-webpack-plugin": "0.1.14",
+    "css-loader": "0.26.1",
+    "cssnano": "3.9.1",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
-    "postcss-autoreset": "1.2.0",
-    "postcss-loader": "0.13.0",
+    "postcss-autoreset": "1.2.1",
+    "postcss-loader": "1.2.1",
     "style-loader": "0.13.1",
-    "sugarss": "0.1.6",
-    "webpack": "2.1.0-beta.25",
+    "sugarss": "0.2.0",
+    "webpack": "2.2.0-rc.0",
     "webpack-md5-hash": "0.0.5"
   },
   "betterScripts": {
