--- a/ui/package.json
+++ b/ui/package.json
@@ -2,23 +2,34 @@
   "name": "url-shortener-demo-ui",
   "version": "1.0.0",
   "description": "Demo of URL Shortener Service",
+  "license": "MIT",
+  "author": {
+    "name": "Alex Masterov",
+    "email": "alex.masterow@gmail.com"
+  },
+  "engines": {
+    "node": "^6.0"
+  },
+  "scripts": {
+    "build": "cross-env NODE_ENV=production webpack"
+  },
   "dependencies": {
     "axios": "0.15.3",
-    "material-ui": "0.16.5",
+    "material-ui": "0.16.6",
     "react": "15.4.1",
     "react-dom": "15.4.1",
     "react-tap-event-plugin": "2.0.1"
   },
   "devDependencies": {
     "assets-webpack-plugin": "3.5.0",
-    "babel-core": "6.20.0",
-    "babel-loader": "6.2.9",
+    "babel-core": "6.21.0",
+    "babel-loader": "6.2.10",
     "babel-plugin-transform-class-properties": "6.19.0",
     "babel-plugin-transform-object-rest-spread": "6.20.2",
     "babel-preset-latest": "6.16.0",
     "babel-preset-react": "6.16.0",
-    "better-npm-run": "0.0.13",
     "clean-webpack-plugin": "0.1.14",
+    "cross-env": "3.1.3",
     "css-loader": "0.26.1",
     "cssnano": "3.9.1",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
@@ -26,18 +37,7 @@
     "postcss-loader": "1.2.1",
     "style-loader": "0.13.1",
     "sugarss": "0.2.0",
-    "webpack": "2.2.0-rc.0",
+    "webpack": "2.2.0-rc.3",
     "webpack-md5-hash": "0.0.5"
-  },
-  "betterScripts": {
-    "build": {
-      "command": "webpack",
-      "env": {
-        "NODE_ENV": "production"
-      }
-    }
-  },
-  "scripts": {
-    "build": "better-npm-run build"
   }
 }
